--- a/activity_04.html
+++ b/activity_04.html
@@ -24,16 +24,16 @@
             veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 
-            proident, sunt in culpa qui officia deserunt mollit anim id est TEST."
+            proident, sunt in culpa qui officia deserunt mollit anim id est."
             </p>
         </section>
 
         <section id="contact-info">
             <h2>Contact Info</h2>
             <ul>
-                <li><b>Email:</b><a href="#">parkeragrant@gmail.com</a></li>
-                <li><b>Github:</b><a href="#">@parkeragrant</a></li>
-                <li><b>Portfolio:</b><a href="#">Coming Soon</a></li>
+                <li><b>Email: </b><a href="#" style="color: #ff0000" >parkeragrant@gmail.com</a></li>
+                <li><b>Github: </b><a href="#" style="color: #ff0000">@parkeragrant</a></li>
+                <li><b>Portfolio: </b><a href="#" style="color: #ff0000">Coming Soon</a></li>
             </ul>
         </section>
     </div>
